--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,23 @@
 {# base.html #}
+{% macro render_pagination(paginate) -%}
+<nav>
+  <ul class="pagination">
+		{% for res in paginate.list_pages() %}
+		  {% if res is not none %}
+			  {% set (text, href) = res %}
+				{% if href is none %}
+				<li class="disabled"><span>{{ text }}</span>
+				{% elif href == True %}
+				<li class="active"><span>{{ text }}<span class="sr-only">(current)</span></span>
+				{% else %}
+				<li><span><a href="{{ href }}">{{ text }}</a>
+				{% endif %}
+				</li>
+			{% endif %}
+		{% endfor %}
+  </ul>
+</nav> 
+{%- endmacro %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,28 +29,26 @@
     <script src="{{ url_for('static', filename='js/jquery-1.11.2.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/acc.js') }}"></script>
-    <script type="text/javascript">
-//      $(function() {
-//        new Notes.Editor();
-//      });
-    </script>
 		{% block extra_head %}{% endblock %}
   </head>
   <body>
-		<nav class="navbar navbar-default">
+	  <nav class="navbar navbar-default">
+	    <div class="navbar-header">
+  	    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#accounting-navbar-collapse-1" aria-expanded="false">
+    	    <span class="sr-only">Toggle navigation</span>
+      	  <span class="icon-bar"></span>
+        	<span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+  	    </button>
+<!--    	  <a class="navbar-brand" href="#">Brand</a> -->
+	    </div>
 		  <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Brand</a>
-        </div>
-
-			</div> <!-- container-fluid -->
+				<div class="collapse navbar-collapse" id="accounting-navbar-collapse-1">
+					{% block navbar %}
+			    {{ nav.mynavbar.render(renderer='nav_renderer') }}
+		      {% endblock %}
+				</div>
+			</div>
 		</nav>
     <div class="container-fluid content">
 			{% for category, message in get_flashed_messages(with_categories=true) %}
