--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,7 @@
     <link href="{{ url_for('static', filename='css/bootstrap.css') }}" rel="stylesheet">
     <script src="{{ url_for('static', filename='js/jquery-1.11.2.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+		<script src="{{ url_for('static', filename='js/Chart.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/acc.js') }}"></script>
 		{% block extra_head %}{% endblock %}
   </head>
@@ -40,13 +41,19 @@
         	<span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
   	    </button>
-<!--    	  <a class="navbar-brand" href="#">Brand</a> -->
+    	  <a class="navbar-brand" href="#">A</a> 
 	    </div>
 		  <div class="container-fluid">
 				<div class="collapse navbar-collapse" id="accounting-navbar-collapse-1">
 					{% block navbar %}
 			    {{ nav.mynavbar.render(renderer='nav_renderer') }}
 		      {% endblock %}
+					<form class="navbar-form navbar-right" role="search" method="post" action="{{ url_for('item_search') }}" >
+						<div class="form-group">
+							 <input type="text" class="form-control" name="search_text" placeholder="Item search">
+						</div>
+						<button type="submit" class="btn btn-default">Search</button>
+					</form>
 				</div>
 			</div>
 		</nav>
