--- a/templates/major.html
+++ b/templates/major.html
@@ -14,14 +14,14 @@
 {% block content %}
 
 {% if majors is defined %}
-<div class="row"><div class="col-lg-9">
+<div class="row"><div class="col-lg-12">
 	<table class="table-striped table-condensed">
 		<thead>
 			<tr>
 				<th style="width: 5%; text-align:center">ID</th> 
 				<th style="width: 25%">Name</th> 
 				<th style="width: 8%">Income</th>
-				<th style="width: 62%">Subcategories</th>
+				<th>Subcategories</th>
 			</tr>
 		</thead>
 		<tbody>
